Fix: Nav bar jumping and not showing correctly on some mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ body {
     margin: 0;
 }
 
+main {
+    padding-top: 60px;
+    margin-top: -60px;
+}
 
 h2 {
     text-align: center;
@@ -442,6 +446,10 @@ button:hover .tooltip {
 @media only screen and (max-width: 1046px) {
     fieldset {
         width: 280px;
+    }
+    .header_and_nav {
+        position: absolute;
+        top: 0px;
     }
     .section_main_content {
         flex-direction: column;
